<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.indiewalkabout.mathbrainer.MathOperationWriteActivity">

    <TextView
        android:id="@+id/firstOperand_choose"
        android:layout_width="47dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="224dp"
        android:gravity="center_vertical"
        android:text="@string/_1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondOperand_choose"
        android:layout_width="47dp"
        android:layout_height="59dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="224dp"
        android:gravity="center_vertical"
        android:text="@string/_2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operationSymbol_choose"
        android:layout_width="42dp"
        android:layout_height="31dp"
        android:layout_marginTop="240dp"
        android:gravity="center_vertical"
        android:text="@string/op"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/secondOperand_choose"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstOperand_choose"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreText_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/lifeRemainText_choose"
        app:layout_constraintStart_toEndOf="@+id/levelText_choose"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelText_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/level"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreValue_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelText_choose" />

    <ProgressBar
        android:id="@+id/timerBar_choose"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/operationSymbol_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <TextView
        android:id="@+id/lifeRemainText_choose"
        android:layout_width="36dp"
        android:layout_height="19dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/lifes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelValue_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
        app:layout_constraintStart_toEndOf="@+id/scoreValue_choose"
        app:layout_constraintTop_toBottomOf="@+id/scoreText_choose" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:columnCount="3"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifeRemainText_choose">

        <ImageView
            android:id="@+id/life_01_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/presence_online"
            tools:layout_editor_absoluteX="301dp" />

        <ImageView
            android:id="@+id/life_02_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/life_03_choose"
            app:layout_constraintStart_toEndOf="@+id/life_01_choose"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/presence_online" />

        <ImageView
            android:id="@+id/life_03_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/presence_online" />
    </GridLayout>

    <GridLayout
        android:id="@+id/answerBtnGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationSymbol_choose"
        app:layout_constraintVertical_bias="0.19">

        <Button
            android:id="@+id/answer_01Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_01value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="313dp" />

        <Button
            android:id="@+id/answer_02Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_02value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="240dp" />

        <Button
            android:id="@+id/answer_03Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_03value"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="240dp" />

        <Button
            android:id="@+id/answer_04Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_04value"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="313dp" />

        <Button
            android:id="@+id/answer_05Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_05value"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="240dp" />

        <Button
            android:id="@+id/answer_06Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_06value"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="313dp" />

        <Button
            android:id="@+id/answer_07Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_07value"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="313dp" />

        <Button
            android:id="@+id/answer_08Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_08value"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="240dp" />

        <Button
            android:id="@+id/answer_09Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_09value"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="313dp" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
